Fixed reference scrollbar & gameSubWindow

--- a/css/referenc.css
+++ b/css/referenc.css
@@ -55,9 +55,11 @@ img {
 }
 
 #gameSubWindow {
+
     position: absolute;
     height: auto;
-    top: 40px;
+    visibility:hidden;
+    top: 37px;
     border: 4px solid #000000;
     background-color: #000000;
     width: calc(100% - 236px);
@@ -101,6 +103,14 @@ img {
 @media (max-width:1170px) {
     .box-list {
         flex-wrap: wrap;
+    }
+}
+@media (max-width:960px) {
+    #gameSubWindow {
+        width: 100%;
+    }
+    #gameSubWindow > ::-webkit-scrollbar-thumb {
+        border-left: 4px solid black;
     }
 }
 
