--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,11 @@ body {
     background: var(--mainColor);
     border-left: 4px solid black;
 }
+@media (max-width:960px) {
+    ::-webkit-scrollbar-thumb {
+        border: 4px solid black;
+    }
+}
 
 .banner {
     line-height: 30px;
@@ -199,8 +204,9 @@ footer {
         height: 42px;
         width: 100%;
         z-index: 1;
-        background-color: rgba(0, 0, 0, .8);
+        background-color: #000000;
         transition: height .4s;
+        position: absolute;
     }
 
     nav:hover {
@@ -233,7 +239,8 @@ footer {
     main {
         width: 100%;
         height: 95%;
-        top:50px
+        top:50px;
+        position:absolute;
     }
 }
 
